--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@drawable/ball"
-              android:baselineAligned="false">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/magicTextView"
+
+        >
+
+
+    <RelativeLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/Cyan"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/ball"
+            >
 
-            />
-    </LinearLayout>
+
+        <TextView
+                android:id="@+id/magicTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="MAGIC!!!"
+                android:textColor="@color/Cyan"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"/>
+    </RelativeLayout>
+
+
 </LinearLayout>
 
